immich/base/server/immich-server.Deployment.yaml
---
# Source: immich/templates/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
  labels:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: server
    app.kubernetes.io/version: v1.119.0
    helm.sh/chart: immich-0.9.3
spec:
  revisionHistoryLimit: 1
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: server
      app.kubernetes.io/instance: immich
  template:
    metadata:
      labels:
        app.kubernetes.io/name: server
        app.kubernetes.io/instance: immich
    spec:
      serviceAccountName: default
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
      - name: immich-server
        image: ghcr.io/immich-app/immich-server:v1.119.0
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 2283
          protocol: TCP
        volumeMounts:
        - name: library
          mountPath: /usr/src/app/upload
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/server/ping
            port: http
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 3
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/server/ping
            port: http
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 3
        startupProbe:
          failureThreshold: 120
          httpGet:
            path: /api/server/ping
            port: http
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 1
        resources:
          limits:
            memory: 3Gi
          requests:
            cpu: 300m
            memory: 2Gi
      volumes:
      - name: library
        persistentVolumeClaim:
          claimName: immich-library-pvc
